destination alphabet wise

--- a/project.html
+++ b/project.html
@@ -40,21 +40,32 @@
 
       <label for="destinationSelect"></label>
       <select id="destinationSelect">
-        <option value="" disabled selected>Choose a destination</option>
-        <!-- Indian Destinations -->
-        <option value="Manali">Manali</option>
-        <option value="Shimla">Shimla</option>
-        <option value="Kashmir">Kashmir</option>
-        <option value="Goa">Goa</option>
-        <option value="Delhi">Delhi</option>
-        <option value="Ahmedabad">Ahmedabad</option>
-        <option value="Kolkata">Kolkata</option>
-        <option value="Agra">Agra</option>
-        <option value="Varanasi">Varanasi</option>
-        <option value="Kerala">Kerala</option>
-        <option value="Jaipur">Jaipur</option>
-        <option value="Leh Ladakh">Leh Ladakh</option>
-        <option value="Rishikesh">Rishikesh</option>
+        <option value="" disabled selected>Choose  destination</option>
+      <!-- Indian Destinations -->
+      <!-- Indian Destinations Alphabetically -->
+  <option value="Agra">Agra</option>
+  <option value="Ahmedabad">Ahmedabad</option>
+  <option value="Bagore ki Haveli Museum">Bagore ki Haveli Museum</option>
+  <option value="Chennai">Chennai</option>
+  <option value="Darjeeling">Darjeeling</option>
+  <option value="Delhi">Delhi</option>
+  <option value="Goa">Goa</option>
+  <option value="Jaipur">Jaipur</option>
+  <option value="Jaisalmer">Jaisalmer</option>
+  <option value="Kashmir">Kashmir</option>
+  <option value="Kaziranga">Kaziranga</option>
+  <option value="Kochi">Kochi</option>
+  <option value="Kolkata">Kolkata</option>
+  <option value="Leh Ladakh">Leh Ladakh</option>
+  <option value="Manali">Manali</option>
+  <option value="Mysore">Mysore</option>
+  <option value="Pune">Pune</option>
+  <option value="Rishikesh">Rishikesh</option>
+  <option value="Shillong">Shillong</option>
+  <option value="Shimla">Shimla</option>
+  <option value="Udaipur">Udaipur</option>
+  <option value="Varanasi">Varanasi</option>
+
         <!-- International Destinations -->
         <option value="Dubai">Dubai</option>
         <option value="Paris">Paris</option>
