--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -141,53 +141,53 @@
  
   const activitiesList = {
   // 🌍 Indian Destinations
-  "Manali": [
-    "Visit Hadimba Temple",
-    "Rohtang Pass Adventure",
-    "Solang Valley Paragliding",
-    "Manali Mall Road Shopping",
-    "Jogini Waterfalls Trek",
-    "Explore Old Manali Cafes",
-    "Hot Springs at Vashisht",
-    "Naggar Castle Visit",
-    "Himalayan Nyingmapa Gompa",
-    "Skiing at Rohtang"
+  "Ahmedabad": [
+    "Sabarmati Ashram Visit",
+    "Akshardham Temple",
+    "Sidi Saiyyed Mosque",
+    "Calico Museum of Textiles",
+    "Kankaria Lake Walk",
+    "Manek Chowk Street Food",
+    "Auto World Vintage Car Museum",
+    "Adalaj Stepwell Tour",
+    "Gujarat Science City",
+    "Local Handicraft Market"
   ],
-  "Shimla": [
-    "Mall Road Evening Walk",
-    "Jakhoo Temple Visit",
-    "Christ Church Tour",
-    "Kufri Snow Adventure",
-    "The Ridge Photography",
+  "Agra": [
+    "Taj Mahal Sunrise Visit",
+    "Agra Fort Tour",
+    "Mehtab Bagh Photography",
+    "Itmad-ud-Daula Tomb Visit",
+    "Fatehpur Sikri Day Trip",
+    "Shopping at Sadar Bazaar",
+    "Kalakriti Art Museum",
+    "Chini ka Rauza Visit",
+    "Local Street Food Tasting",
+    "Yamuna River Viewpoint"
+  ],
+  "Chennai": [
+    "Marina Beach Walk",
+    "Kapaleeshwarar Temple Visit",
+    "Fort St. George Tour",
+    "Government Museum Exploration",
+    "San Thome Basilica",
+    "Elliot’s Beach Evening Walk",
+    "Arignar Anna Zoological Park",
+    "Dakshinachitra Cultural Museum",
+    "Local Tamil Cuisine Tasting",
+    "Shopping at T Nagar"
+  ],
+  "Darjeeling": [
+    "Tiger Hill Sunrise",
     "Toy Train Ride",
-    "Local Market Shopping",
-    "Summer Hill Trek",
-    "Annandale Army Museum",
-    "Ice Skating Rink"
-  ],
-  "Kashmir": [
-    "Dal Lake Shikara Ride",
-    "Gulmarg Gondola",
-    "Sonmarg Valley Tour",
-    "Mughal Gardens Visit",
-    "Pahalgam River Rafting",
-    "Shopping in Srinagar",
-    "Sufi Shrine Hazratbal",
-    "Betaab Valley Visit",
-    "Tulip Garden Photography",
-    "Houseboat Stay"
-  ],
-  "Goa": [
-    "Baga Beach Party",
-    "Dudhsagar Waterfalls Trek",
-    "Fort Aguada Tour",
-    "Scuba Diving",
-    "Spice Plantation Visit",
-    "Cruise on Mandovi River",
-    "Anjuna Flea Market",
-    "Chapora Fort Sunset",
-    "Candolim Beach Relax",
-    "Nightlife at Tito’s"
+    "Batasia Loop Photography",
+    "Himalayan Mountaineering Institute",
+    "Peace Pagoda Visit",
+    "Tea Garden Tour",
+    "Darjeeling Mall Road Walk",
+    "Padmaja Naidu Himalayan Zoological Park",
+    "Ghoom Monastery",
+    "Local Street Food Tasting"
   ],
   "Delhi": [
     "Visit India Gate",
@@ -201,71 +201,17 @@
     "Raj Ghat Memorial Visit",
     "Shopping at Connaught Place"
   ],
-  "Gujarat": {
-    "Ahmedabad": [
-      "Sabarmati Ashram Visit",
-      "Kite Museum Exploration",
-      "Akshardham Temple Visit",
-      "Sidi Saiyyed Mosque Photography",
-      "Calico Museum of Textiles",
-      "Manek Chowk Street Food",
-      "Auto World Vintage Car Museum",
-      "Jama Masjid Visit",
-      "Adalaj Stepwell Tour",
-      "Kankaria Lake Walk"
-    ]
-  },
-  "West Bengal": {
-    "Kolkata": [
-      "Victoria Memorial Visit",
-      "Howrah Bridge Photography",
-      "Indian Museum Tour",
-      "St. Paul's Cathedral Visit",
-      "Dakshineswar Kali Temple",
-      "Princep Ghat Sunset Walk",
-      "Park Street Food & Cafe Hopping",
-      "Marble Palace Exploration",
-      "Science City Visit",
-      "Kumartuli Artist Village"
-    ]
-  },
-  "Uttar Pradesh": {
-    "Agra": [
-      "Taj Mahal Sunrise Visit",
-      "Agra Fort Tour",
-      "Mehtab Bagh Photography",
-      "Itmad-ud-Daula Tomb Visit",
-      "Fatehpur Sikri Day Trip",
-      "Shopping at Sadar Bazaar",
-      "Kalakriti Art Museum",
-      "Chini ka Rauza Visit",
-      "Local Street Food Tasting",
-      "Yamuna River Viewpoint"
-    ],
-    "Varanasi": [
-      "Ganga Aarti Ceremony",
-      "Boat Ride on Ganges",
-      "Kashi Vishwanath Temple",
-      "Sarnath Buddhist Site",
-      "Manikarnika Ghat Visit",
-      "Weavers’ Colony Tour",
-      "Ramnagar Fort",
-      "Street Food Walk",
-      "Banaras Hindu University",
-      "Morning Yoga by Ganga"
-    ]
-  },
-  "Kerala": [
-    "Backwater Houseboat Ride",
-    "Munnar Tea Gardens",
-    "Alleppey Beach Walk",
-    "Kathakali Dance Show",
-    "Periyar Wildlife Sanctuary",
-    "Kumarakom Bird Sanctuary",
-    "Varkala Cliff Trek",
-    "Athirapally Waterfalls",
-    "Fort Kochi Heritage Walk",
-    "Ayurvedic Massage"
+  "Goa": [
+    "Baga Beach Party",
+    "Dudhsagar Waterfalls Trek",
+    "Fort Aguada Tour",
+    "Scuba Diving",
+    "Spice Plantation Visit",
+    "Cruise on Mandovi River",
+    "Anjuna Flea Market",
+    "Chapora Fort Sunset",
+    "Candolim Beach Relax",
+    "Nightlife at Tito’s"
   ],
   "Jaipur": [
     "Amber Fort Tour",
@@ -279,6 +225,66 @@
     "Birla Mandir Visit",
     "Hot Air Balloon Ride"
   ],
+  "Jaisalmer": [
+    "Jaisalmer Fort Exploration",
+    "Patwon Ki Haveli Visit",
+    "Sam Sand Dunes Camel Safari",
+    "Desert Camping",
+    "Gadisar Lake Walk",
+    "Kuldhara Village Visit",
+    "Local Market Shopping",
+    "Sunset Photography at Dunes",
+    "Thar Heritage Museum",
+    "Cultural Folk Dance Show"
+  ],
+  "Kashmir": [
+    "Dal Lake Shikara Ride",
+    "Gulmarg Gondola",
+    "Sonmarg Valley Tour",
+    "Mughal Gardens Visit",
+    "Pahalgam River Rafting",
+    "Shopping in Srinagar",
+    "Sufi Shrine Hazratbal",
+    "Betaab Valley Visit",
+    "Tulip Garden Photography",
+    "Houseboat Stay"
+  ],
+  "Kaziranga": [
+    "Kaziranga National Park Safari",
+    "Elephant Safari",
+    "Bird Watching",
+    "Local Tea Garden Tour",
+    "Mohanbari Village Walk",
+    "Kaziranga Interpretation Centre",
+    "Photography Tour",
+    "River Rafting in Nearby Streams",
+    "Nature Trail Trekking",
+    "Cultural Interaction with Local Tribes"
+  ],
+  "Kochi": [
+    "Fort Kochi Walk",
+    "Chinese Fishing Nets",
+    "Mattancherry Palace Visit",
+    "Jew Town Exploration",
+    "Spice Market Shopping",
+    "Kathakali Dance Show",
+    "Marine Drive Stroll",
+    "St. Francis Church Visit",
+    "Kumarakom Backwater Day Trip",
+    "Kerala Cuisine Cooking Class"
+  ],
+  "Kolkata": [
+    "Victoria Memorial Visit",
+    "Howrah Bridge Walk",
+    "Dakshineswar Kali Temple",
+    "Boat Ride on Hooghly River",
+    "Mother House Visit",
+    "Street Food Tour",
+    "Indian Museum Exploration",
+    "Princep Ghat Photography",
+    "Park Street Evening Walk",
+    "Science City Visit"
+  ],
   "Leh Ladakh": [
     "Pangong Lake Visit",
     "Khardung La Pass Ride",
@@ -290,6 +296,42 @@
     "Tso Moriri Lake",
     "Hall of Fame Museum",
     "Diskit Monastery"
+  ],
+  "Manali": [
+    "Visit Hadimba Temple",
+    "Rohtang Pass Adventure",
+    "Solang Valley Paragliding",
+    "Manali Mall Road Shopping",
+    "Jogini Waterfalls Trek",
+    "Explore Old Manali Cafes",
+    "Hot Springs at Vashisht",
+    "Naggar Castle Visit",
+    "Himalayan Nyingmapa Gompa",
+    "Skiing at Rohtang"
+  ],
+  "Mysore": [
+    "Mysore Palace Tour",
+    "Chamundi Hill Visit",
+    "St. Philomena's Church",
+    "Mysore Zoo",
+    "Brindavan Gardens Musical Fountain",
+    "Railway Museum",
+    "Shopping for Silk Sarees",
+    "Local Market Street Food",
+    "Kukkarahalli Lake Walk",
+    "Art and Craft Museum"
+  ],
+  "Pune": [
+    "Shaniwar Wada Fort Visit",
+    "Aga Khan Palace Tour",
+    "Pataleshwar Cave Temple",
+    "Raja Dinkar Kelkar Museum",
+    "Osho Ashram Visit",
+    "Pune Okayama Friendship Garden",
+    "Sinhagad Fort Trek",
+    "Koregaon Park Walk",
+    "Local Street Food Sampling",
+    "Shopping at Laxmi Road"
   ],
   "Rishikesh": [
     "River Rafting on Ganga",
@@ -303,6 +345,55 @@
     "Triveni Ghat Rituals",
     "Adventure Zipline"
   ],
+  "Shillong": [
+    "Elephant Falls Visit",
+    "Ward’s Lake Walk",
+    "Shillong Peak Viewpoint",
+    "Don Bosco Museum",
+    "Lady Hydari Park",
+    "Police Bazaar Shopping",
+    "Sweet Falls Trek",
+    "Umiam Lake Water Sports",
+    "Mawphlang Sacred Forest",
+    "Local Khasi Cuisine Tasting"
+  ],
+  "Shimla": [
+    "Mall Road Evening Walk",
+    "Jakhoo Temple Visit",
+    "Christ Church Tour",
+    "Kufri Snow Adventure",
+    "The Ridge Photography",
+    "Toy Train Ride",
+    "Local Market Shopping",
+    "Summer Hill Trek",
+    "Annandale Army Museum",
+    "Ice Skating Rink"
+  ],
+  "Udaipur": [
+    "City Palace Tour",
+    "Lake Pichola Boat Ride",
+    "Jag Mandir Visit",
+    "Saheliyon ki Bari Garden",
+    "Bagore ki Haveli Museum",
+    "Fateh Sagar Lake Walk",
+    "Vintage Car Museum",
+    "Monsoon Palace Sunset",
+    "Local Market Shopping",
+    "Cultural Folk Dance Show"
+  ],
+  "Varanasi": [
+    "Ganga Aarti Ceremony",
+    "Boat Ride on Ganges",
+    "Kashi Vishwanath Temple",
+    "Sarnath Buddhist Site",
+    "Manikarnika Ghat Visit",
+    "Weavers’ Colony Tour",
+    "Ramnagar Fort",
+    "Street Food Walk",
+    "Banaras Hindu University",
+    "Morning Yoga by Ganga"
+  ],
+
 
   // 🌍 International Destinations
   "Dubai": [
