feedback  form updated

--- a/project.html
+++ b/project.html
@@ -17,6 +17,7 @@
     </video>
   </div>
 
+
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">Plan & Go ✈</div>
@@ -45,7 +46,8 @@
       <!-- Indian Destinations Alphabetically -->
   <option value="Agra">Agra</option>
   <option value="Ahmedabad">Ahmedabad</option>
-  <option value="Bagore ki Haveli Museum">Bagore ki Haveli Museum</option>
+  <option value="Bathinda">Bathinda</option>
+  <option value="Chandigarh">Chandigarh</option>
   <option value="Chennai">Chennai</option>
   <option value="Darjeeling">Darjeeling</option>
   <option value="Delhi">Delhi</option>
@@ -58,6 +60,7 @@
   <option value="Kolkata">Kolkata</option>
   <option value="Leh Ladakh">Leh Ladakh</option>
   <option value="Manali">Manali</option>
+  <option value="Mumbai">Mumbai</option>
   <option value="Mysore">Mysore</option>
   <option value="Pune">Pune</option>
   <option value="Rishikesh">Rishikesh</option>
@@ -105,9 +108,9 @@
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
-      <div class="card"> About us </div>
+      <div class="card"> 👥 About us </div>
       <div class="card">☀ Get Weather Updates</div>
-      <div class="card">🤝 Share Experience</div>
+       <a href="share-experience.html" class="card">🤝 Share Experience</a>
     </div>
   </section>
 
