--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -165,6 +165,32 @@
     "Local Street Food Tasting",
     "Yamuna River Viewpoint"
   ],
+  "Bathinda": [
+    "Qila Mubarak Fort Visit",
+    "Rose Garden Stroll",
+    "Bathinda Lake Walk",
+    "City Mall Shopping",
+    "Cultural Heritage Museum",
+    "Harike Wetland Excursion",
+    "Gurdwara Talwandi Visit",
+    "Local Street Food Tasting",
+    "Stadium Cricket Match",
+    "Baba Farid Shrine Visit"
+],
+
+"Chandigarh": [
+    "Rock Garden Visit",
+    "Sukhna Lake Boating",
+    "Rose Garden Stroll",
+    "Sector 17 Market Shopping",
+    "Elante Mall Visit",
+    "Le Corbusier Architecture Tour",
+    "Government Museum & Art Gallery",
+    "Japanese Garden Walk",
+    "Pinjore Gardens Excursion",
+    "Local Punjabi Cuisine Tasting"
+],
+
   "Chennai": [
     "Marina Beach Walk",
     "Kapaleeshwarar Temple Visit",
@@ -309,6 +335,19 @@
     "Himalayan Nyingmapa Gompa",
     "Skiing at Rohtang"
   ],
+  "Mumbai": [
+    "Gateway of India Visit",
+    "Marine Drive Evening Walk",
+    "Chhatrapati Shivaji Maharaj Terminus Tour",
+    "Elephanta Caves Exploration",
+    "Sanjay Gandhi National Park Trek",
+    "Juhu Beach Sunset",
+    "Colaba Causeway Shopping",
+    "Haji Ali Dargah Visit",
+    "Siddhivinayak Temple Darshan",
+    "Bollywood Film City Tour"
+],
+
   "Mysore": [
     "Mysore Palace Tour",
     "Chamundi Hill Visit",
