linked home page with about us page

--- a/project.html
+++ b/project.html
@@ -108,7 +108,7 @@
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
-      <div class="card"> 👥 About us </div>
+      <a href="aboutus.html" class="card"> 👥 About us </a>
       <div class="card">☀ Get Weather Updates</div>
        <a href="share-experience.html" class="card">🤝 Share Experience</a>
     </div>
