--- a/share-experience.html
+++ b/share-experience.html
@@ -120,7 +120,7 @@
   <label>Trip Destination</label>
   <select id="tripDestination">
     <option value="" disabled selected>Select your trip destination</option>
-    <!-- Domestic Destinations -->
+  
     <option value="Agra">Agra</option>
     <option value="Ahmedabad">Ahmedabad</option>
     <option value="Bathinda">Bathinda</option>
@@ -146,7 +146,6 @@
     <option value="Udaipur">Udaipur</option>
     <option value="Varanasi">Varanasi</option>
 
-    <!-- International Destinations -->
     <option value="Dubai">Dubai</option>
     <option value="Paris">Paris</option>
     <option value="London">London</option>
@@ -198,7 +197,7 @@
 </div>
 
 <script>
-  // Pre-fill user info only
+
   const user = JSON.parse(localStorage.getItem("loggedInUser")) || {};
 
   if(user.username) document.getElementById("userName").value = user.username;
@@ -261,7 +260,7 @@
 
     document.getElementById("successMsg").style.display = "block";
     document.getElementById("feedbackText").value = "";
-    document.getElementById("tripDestination").value = ""; // reset dropdown
+    document.getElementById("tripDestination").value = ""; 
     selectedRating = 0;
     updateStars(selectedRating);
     dropdown.value = "";
