--- a/project.html
+++ b/project.html
@@ -108,9 +108,9 @@
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
-      <a href="aboutus.html" class="card"> 👥 About us </a>
+      <a href="http://127.0.0.1:5501/aboutus.html" class="card"> 👥 About us </a>
       <div class="card">☀ Get Weather Updates</div>
-       <a href="share-experience.html" class="card">🤝 Share Experience</a>
+       <a href="http://127.0.0.1:5501/share-experience.html" class="card">🤝 Share Experience</a>
     </div>
   </section>
 
@@ -120,7 +120,7 @@
     <p>Discover some of our handpicked destinations to make your travel unforgettable.</p>
   
     <div class="trips-container">
-      <a href="snowy.html">
+      <a href="http://127.0.0.1:5501/snowy.html">
         <div class="trip-card">
           <img src="https://img.freepik.com/premium-photo/child-building-snowman-kids-build-snow-man-boy-girl-playing-outdoors-snowy-winter-day-outdoor-family-fun-christmas-vacation-mountains_1028938-177583.jpg" alt="Shimla Family Trip">
           <h3>Best Choices for Snowy Retreat</h3>
@@ -128,7 +128,7 @@
         </div>
       </a>
 
-      <a href="sunny.html">
+      <a href="http://127.0.0.1:5501/sunny.html">
         <div class="trip-card">
           <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
           <h3>Best Choices for Sunny Shores </h3><br>
@@ -136,7 +136,7 @@
         </div>
       </a>
 
-      <a href="pilgrimage.html">
+      <a href="http://127.0.0.1:5501/pilgrimage.html">
         <div class="trip-card">
           <img src="https://images.nativeplanet.com/img/2017/09/04-1504499382-8.jpg" alt="Mandi">
           <h3>Best Choices for Pilgrimage</h3>
