Some text changes in Snowy Retreats

--- a/snowy.html
+++ b/snowy.html
@@ -219,7 +219,7 @@
 
 
   <div class="wrap">
-    <h1>Best choices for Sunny Shores Retreat</h1>
+    <h1>Best choices for Snowy Retreat</h1>
     <div class="subtitle">Click any destination for more info — perfect picks for a refreshing getaway.</div>
 
     <div class="grid" id="grid">
