add international places

--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -165,6 +165,31 @@
     "Local Street Food Tasting",
     "Yamuna River Viewpoint"
   ],
+  "Amritsar": [
+  "Golden Temple Visit",
+  "Wagah Border Ceremony",
+  "Jallianwala Bagh Memorial",
+  "Partition Museum Tour",
+  "Gobindgarh Fort",
+  "Hall Bazaar Shopping",
+  "Durgiana Temple",
+  "Local Punjabi Food Tasting",
+  "Ram Bagh Gardens Walk",
+  "Heritage Street Stroll"
+],
+
+"Aurangabad": [
+  "Ajanta Caves Tour",
+  "Ellora Caves Exploration",
+  "Bibi Ka Maqbara Visit",
+  "Daulatabad Fort",
+  "Aurangabad Caves",
+  "Siddharth Garden and Zoo",
+  "Shopping for Himroo Shawls",
+  "Local Street Food",
+  "Grishneshwar Temple",
+  "Aurangabad Museum"
+],
   "Bathinda": [
     "Qila Mubarak Fort Visit",
     "Rose Garden Stroll",
@@ -203,6 +228,20 @@
     "Local Tamil Cuisine Tasting",
     "Shopping at T Nagar"
   ],
+
+  "Coorg": [
+  "Abbey Falls Visit",
+  "Coffee Plantation Tour",
+  "Raja’s Seat Sunset View",
+  "Nagarhole National Park Safari",
+  "Dubare Elephant Camp",
+  "Madikeri Fort",
+  "Talacauvery Temple",
+  "Local Coorgi Food Tasting",
+  "Omkareshwara Temple",
+  "Trekking Trails in Coorg"
+],
+
   "Darjeeling": [
     "Tiger Hill Sunrise",
     "Toy Train Ride",
@@ -263,6 +302,18 @@
     "Thar Heritage Museum",
     "Cultural Folk Dance Show"
   ],
+  "Jodhpur": [
+  "Mehrangarh Fort Tour",
+  "Umaid Bhawan Palace",
+  "Jaswant Thada Memorial",
+  "Clock Tower Market",
+  "Mandore Gardens",
+  "Toorji ka Jhalra Stepwell",
+  "Local Handicraft Shopping",
+  "Camel Safari",
+  "Blue City Walk",
+  "Rajasthani Food Experience"
+],
   "Kashmir": [
     "Dal Lake Shikara Ride",
     "Gulmarg Gondola",
@@ -335,6 +386,19 @@
     "Himalayan Nyingmapa Gompa",
     "Skiing at Rohtang"
   ],
+  "Mount Abu": [
+  "Dilwara Jain Temples",
+  "Nakki Lake Boating",
+  "Guru Shikhar Peak Trek",
+  "Sunset Point Visit",
+  "Mount Abu Wildlife Sanctuary",
+  "Achalgarh Fort",
+  "Trevor’s Tank Crocodile Spotting",
+  "Shopping for Rajasthani Crafts",
+  "Toad Rock Viewpoint",
+  "Local Food at Mount Abu Market"
+],
+
   "Mumbai": [
     "Gateway of India Visit",
     "Marine Drive Evening Walk",
@@ -433,8 +497,33 @@
     "Morning Yoga by Ganga"
   ],
 
+  "Vizag": [
+  "RK Beach Walk",
+  "Submarine Museum (INS Kursura)",
+  "Kailasagiri Hilltop Park",
+  "Araku Valley Trip",
+  "Borra Caves Exploration",
+  "Yarada Beach",
+  "Simhachalam Temple",
+  "Indira Gandhi Zoological Park",
+  "Dolphin’s Nose Viewpoint",
+  "Local Andhra Seafood Tasting"
+],
 
   // 🌍 International Destinations
+  "Amsterdam": [
+  "Canal Cruise Tour",
+  "Van Gogh Museum Visit",
+  "Anne Frank House",
+  "Rijksmuseum Exploration",
+  "Dam Square Walk",
+  "Heineken Experience",
+  "Vondelpark Cycling",
+  "Bloemenmarkt (Flower Market)",
+  "Jordaan Neighborhood Stroll",
+  "Local Cheese & Stroopwafel Tasting"
+],
+
   "Dubai": [
     "Burj Khalifa View",
     "Desert Safari",
@@ -717,6 +806,7 @@
     "Potsdamer Platz",
     "Berlin Zoo"
   ]
+  
 };
 
   function generateTrip() {
