--- a/project.html
+++ b/project.html
@@ -40,60 +40,82 @@
       <input type="date" id="endDate">
 
       <label for="destinationSelect"></label>
-      <select id="destinationSelect">
-        <option value="" disabled selected>Choose  destination</option>
-      <!-- Indian Destinations -->
-      <!-- Indian Destinations Alphabetically -->
+<select id="destinationSelect">
+  <option value="" disabled selected>Choose destination</option>
+  
+  <!-- Indian Destinations -->
+  <option disabled>──Indian Destinations ──</option>
   <option value="Agra">Agra</option>
-  <option value="Ahmedabad">Ahmedabad</option>
-  <option value="Bathinda">Bathinda</option>
-  <option value="Chandigarh">Chandigarh</option>
-  <option value="Chennai">Chennai</option>
-  <option value="Darjeeling">Darjeeling</option>
-  <option value="Delhi">Delhi</option>
-  <option value="Goa">Goa</option>
-  <option value="Jaipur">Jaipur</option>
-  <option value="Jaisalmer">Jaisalmer</option>
-  <option value="Kashmir">Kashmir</option>
-  <option value="Kaziranga">Kaziranga</option>
-  <option value="Kochi">Kochi</option>
-  <option value="Kolkata">Kolkata</option>
-  <option value="Leh Ladakh">Leh Ladakh</option>
-  <option value="Manali">Manali</option>
-  <option value="Mumbai">Mumbai</option>
-  <option value="Mysore">Mysore</option>
-  <option value="Pune">Pune</option>
-  <option value="Rishikesh">Rishikesh</option>
-  <option value="Shillong">Shillong</option>
-  <option value="Shimla">Shimla</option>
-  <option value="Udaipur">Udaipur</option>
-  <option value="Varanasi">Varanasi</option>
+<option value="Ahmedabad">Ahmedabad</option>
+<option value="Amritsar">Amritsar</option>
+<option value="Aurangabad">Aurangabad</option>
+<option value="Bathinda">Bathinda</option>
+<option value="Chandigarh">Chandigarh</option>
+<option value="Chennai">Chennai</option>
+<option value="Coorg">Coorg</option>
+<option value="Darjeeling">Darjeeling</option>
+<option value="Delhi">Delhi</option>
+<option value="Goa">Goa</option>
+<option value="Hyderabad">Hyderabad</option>
+<option value="Jaipur">Jaipur</option>
+<option value="Jaisalmer">Jaisalmer</option>
+<option value="Jodhpur">Jodhpur</option>
+<option value="Kashmir">Kashmir</option>
+<option value="Kaziranga">Kaziranga</option>
+<option value="Kochi">Kochi</option>
+<option value="Kolkata">Kolkata</option>
+<option value="Leh Ladakh">Leh Ladakh</option>
+<option value="Manali">Manali</option>
+<option value="Mount Abu">Mount Abu</option>
+<option value="Mumbai">Mumbai</option>
+<option value="Mysore">Mysore</option>
+<option value="Ooty">Ooty</option>
+<option value="Pune">Pune</option>
+<option value="Rishikesh">Rishikesh</option>
+<option value="Shillong">Shillong</option>
+<option value="Shimla">Shimla</option>
+<option value="Udaipur">Udaipur</option>
+<option value="Varanasi">Varanasi</option>
+<option value="Vizag">Vizag (Visakhapatnam)</option>
 
-        <!-- International Destinations -->
-        <option value="Dubai">Dubai</option>
-        <option value="Paris">Paris</option>
-        <option value="London">London</option>
-        <option value="New York">New York</option>
-        <option value="Calgary">Calgary</option>
-        <option value="Surrey">Surrey</option>
-        <option value="Ontario">Ontario</option>
-        <option value="Singapore">Singapore</option>
-        <option value="Tokyo">Tokyo</option>
-        <option value="Bangkok">Bangkok</option>
-        <option value="Bali">Bali</option>
-        <option value="Maldives">Maldives</option>
-        <option value="Switzerland">Switzerland</option>
-        <option value="Rome">Rome</option>
-        <option value="Barcelona">Barcelona</option>
-        <option value="Istanbul">Istanbul</option>
-        <option value="Sydney">Sydney</option>
-        <option value="Los Angeles">Los Angeles</option>
-        <option value="Hong Kong">Hong Kong</option>
-        <option value="Cape Town">Cape Town</option>
-        <option value="Athens">Athens</option>
-        <option value="Moscow">Moscow</option>
-        <option value="Berlin">Berlin</option>
-      </select>
+
+  <!-- International Destinations -->
+  <option disabled>──International Destinations ──</option>
+  <option value="Amsterdam">Amsterdam (Netherlands)</option>
+  <option value="Athens">Athens (Greece)</option>
+  <option value="Bali">Bali (Indonesia)</option>
+  <option value="Bangkok">Bangkok (Thailand)</option>
+  <option value="Barcelona">Barcelona (Spain)</option>
+  <option value="Berlin">Berlin (Germany)</option>
+  <option value="Cairo">Cairo (Egypt)</option>
+  <option value="Calgary">Calgary (Canada)</option>
+  <option value="Cape Town">Cape Town (South Africa)</option>
+  <option value="Doha">Doha (Qatar)</option>
+  <option value="Dubai">Dubai (UAE)</option>
+  <option value="Hong Kong">Hong Kong (China)</option>
+  <option value="Istanbul">Istanbul (Turkey)</option>
+  <option value="Kuala Lumpur">Kuala Lumpur (Malaysia)</option>
+  <option value="Lisbon">Lisbon (Portugal)</option>
+  <option value="London">London (UK)</option>
+  <option value="Los Angeles">Los Angeles (USA)</option>
+  <option value="Maldives">Maldives (Maldives)</option>
+  <option value="Mexico City">Mexico City (Mexico)</option>
+  <option value="Moscow">Moscow (Russia)</option>
+  <option value="New York">New York (USA)</option>
+  <option value="Ontario">Ontario (Canada)</option>
+  <option value="Paris">Paris (France)</option>
+  <option value="Rio de Janeiro">Rio de Janeiro (Brazil)</option>
+  <option value="Rome">Rome (Italy)</option>
+  <option value="San Francisco">San Francisco (USA)</option>
+  <option value="Seoul">Seoul (South Korea)</option>
+  <option value="Singapore">Singapore (Singapore)</option>
+  <option value="Surrey">Surrey (Canada)</option>
+  <option value="Sydney">Sydney (Australia)</option>
+  <option value="Switzerland">Switzerland (Switzerland)</option>
+  <option value="Tokyo">Tokyo (Japan)</option>
+  <option value="Vienna">Vienna (Austria)</option>
+</select>
+
 
       <input type="number" id="people" min="1" placeholder="Number of People">
 
