--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -805,8 +805,123 @@
     "East Side Gallery",
     "Potsdamer Platz",
     "Berlin Zoo"
-  ]
-  
+  ],
+  "Vienna": [
+  "Schönbrunn Palace Tour",
+  "St. Stephen’s Cathedral",
+  "Belvedere Palace",
+  "Vienna State Opera Show",
+  "Hofburg Palace",
+  "Prater Amusement Park",
+  "Naschmarkt Food Tasting",
+  "Albertina Museum",
+  "Kunsthistorisches Museum",
+  "Classical Music Concert Experience"
+],
+
+"Seoul": [
+  "Gyeongbokgung Palace Tour",
+  "Bukchon Hanok Village",
+  "N Seoul Tower Visit",
+  "Myeongdong Street Shopping",
+  "Changdeokgung Palace",
+  "Han River Cruise",
+  "Dongdaemun Design Plaza",
+  "Insadong Traditional Street",
+  "Lotte World Theme Park",
+  "Korean BBQ & Street Food Tasting"
+],
+
+"Kuala Lumpur": [
+  "Petronas Twin Towers Visit",
+  "Batu Caves Tour",
+  "KL Tower Sky Deck",
+  "Aquaria KLCC",
+  "Bukit Bintang Shopping",
+  "Chinatown (Petaling Street)",
+  "National Mosque of Malaysia",
+  "Perdana Botanical Gardens",
+  "Little India (Brickfields)",
+  "Local Malaysian Food Experience"
+],
+
+"Doha": [
+  "Souq Waqif Market Walk",
+  "Museum of Islamic Art",
+  "Katara Cultural Village",
+  "The Pearl-Qatar",
+  "Corniche Waterfront Promenade",
+  "Aspire Park",
+  "Desert Safari & Dune Bashing",
+  "National Museum of Qatar",
+  "Villaggio Mall Shopping",
+  "Traditional Qatari Cuisine Tasting"
+],
+
+"Cairo": [
+  "Giza Pyramids & Sphinx Tour",
+  "Egyptian Museum Visit",
+  "Khan el-Khalili Bazaar",
+  "Cairo Citadel",
+  "Mosque of Muhammad Ali",
+  "Nile River Cruise",
+  "Coptic Cairo Tour",
+  "Al-Azhar Park",
+  "Old Cairo Walking Tour",
+  "Local Egyptian Food Experience"
+],
+
+"Mexico City": [
+  "Zócalo (Main Square) Tour",
+  "Frida Kahlo Museum",
+  "Chapultepec Castle",
+  "Teotihuacan Pyramids Day Trip",
+  "National Museum of Anthropology",
+  "Xochimilco Boat Ride",
+  "Palacio de Bellas Artes",
+  "Coyoacán Neighborhood Walk",
+  "Metropolitan Cathedral Visit",
+  "Mexican Street Food Tasting"
+],
+
+"Rio de Janeiro": [
+  "Christ the Redeemer Statue",
+  "Sugarloaf Mountain Cable Car",
+  "Copacabana Beach Walk",
+  "Ipanema Beach Relaxation",
+  "Maracanã Stadium Tour",
+  "Tijuca National Park Hike",
+  "Selarón Steps Visit",
+  "Sambadrome Experience",
+  "Santa Teresa Neighborhood Walk",
+  "Brazilian BBQ & Samba Night"
+],
+
+"San Francisco": [
+  "Golden Gate Bridge Walk",
+  "Alcatraz Island Tour",
+  "Fisherman’s Wharf",
+  "Chinatown Exploration",
+  "Lombard Street Visit",
+  "Pier 39 Sea Lions",
+  "Golden Gate Park",
+  "Cable Car Ride",
+  "Union Square Shopping",
+  "Local Seafood & Sourdough Tasting"
+],
+
+"Lisbon": [
+  "Belém Tower Visit",
+  "Jerónimos Monastery",
+  "Alfama District Walk",
+  "Tram 28 Ride",
+  "Castelo de São Jorge",
+  "LX Factory Market",
+  "Fado Music Experience",
+  "Time Out Market Food Tour",
+  "Santa Justa Lift",
+  "Tagus River Sunset Cruise"
+]
 };
 
   function generateTrip() {
