--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -301,8 +301,405 @@
     "Anna Centenary Library",
     "Kapalishwarar Tank Festival",
     "Boat Ride at Muttukadu"
+  ],
+
+  // 🇮🇳 Indian Destinations (Part 2)
+
+  "Goa": [
+    "Baga Beach Water Sports",
+    "Calangute Beach Sunset",
+    "Fort Aguada Visit",
+    "Dudhsagar Waterfall Trek",
+    "Anjuna Flea Market Shopping",
+    "Chapora Fort Photography",
+    "Basilica of Bom Jesus",
+    "Se Cathedral Exploration",
+    "Local Goan Food Tasting",
+    "Mandovi River Cruise",
+    "Casino Night Experience",
+    "Butterfly Beach Visit",
+    "Spice Plantation Tour",
+    "Clubbing at Tito’s",
+    "Palolem Beach Relaxing",
+    "Scuba Diving at Grande Island",
+    "Parasailing Adventure",
+    "Shopping for Handicrafts",
+    "Fontainhas Heritage Walk",
+    "Sunburn Music Festival"
+  ],
+
+  "Jaipur": [
+    "Amber Fort Elephant Ride",
+    "City Palace Exploration",
+    "Hawa Mahal Photography",
+    "Jantar Mantar Visit",
+    "Nahargarh Fort Sunset",
+    "Jaigarh Fort Tour",
+    "Albert Hall Museum",
+    "Birla Mandir Temple",
+    "Shopping at Johari Bazaar",
+    "Shopping at Bapu Bazaar",
+    "Chokhi Dhani Village Experience",
+    "Jal Mahal Evening View",
+    "Sisodia Rani Ka Bagh Garden",
+    "Local Rajasthani Thali",
+    "Sound & Light Show Amber Fort",
+    "Shopping for Blue Pottery",
+    "Elephant Sanctuary Visit",
+    "Jaipur Wax Museum",
+    "Statue Circle Park Walk",
+    "Rajasthani Folk Dance Show"
+  ],
+
+  "Jaisalmer": [
+    "Jaisalmer Fort Tour",
+    "Patwon Ki Haveli Visit",
+    "Sam Sand Dunes Camel Safari",
+    "Kuldhara Haunted Village",
+    "Desert Camping Experience",
+    "Bada Bagh Sunset",
+    "Salim Singh Ki Haveli",
+    "Gadisar Lake Boating",
+    "Tazia Tower Photography",
+    "Shopping at Sadar Bazaar",
+    "Shopping for Handicrafts",
+    "Desert Jeep Safari",
+    "Local Rajasthani Cuisine Tasting",
+    "Khuri Sand Dunes Visit",
+    "Jain Temples Exploration",
+    "Government Museum",
+    "Wood Fossil Park Trip",
+    "Rajasthani Folk Music & Dance",
+    "Mandir Palace Visit",
+    "Night under the Stars in Desert"
+  ],
+
+  "Kashmir": [
+    "Shikara Ride at Dal Lake",
+    "Mughal Gardens Walk",
+    "Houseboat Stay",
+    "Gulmarg Gondola Ride",
+    "Pahalgam River Rafting",
+    "Sonmarg Glacier Trek",
+    "Shopping for Pashmina Shawls",
+    "Tulip Garden Visit",
+    "Hazratbal Shrine",
+    "Shankaracharya Temple",
+    "Local Kashmiri Wazwan Cuisine",
+    "Snow Skiing in Gulmarg",
+    "Betaab Valley Photography",
+    "Aru Valley Trek",
+    "Nishat Bagh Garden",
+    "Pari Mahal Sunset",
+    "Wular Lake Bird Watching",
+    "Shopping for Kashmiri Carpets",
+    "Floating Market Experience",
+    "Local Folk Dance & Music"
+  ],
+
+  "Kaziranga": [
+    "Kaziranga National Park Jeep Safari",
+    "Elephant Safari Adventure",
+    "Bird Watching in Park",
+    "Orchid Biodiversity Park",
+    "Tea Garden Visit",
+    "Ethnic Village Experience",
+    "Local Assamese Cuisine Tasting",
+    "Shopping for Bamboo Handicrafts",
+    "Bihu Dance Performance",
+    "Nature Photography",
+    "River Dolphin Spotting",
+    "Visit to Karbi Anglong Hills",
+    "Wildlife Interpretation Centre",
+    "Brahmaputra River Cruise",
+    "Adventure Trekking Trails",
+    "Folk Music Shows",
+    "Camping near Forest",
+    "Village Homestay Experience",
+    "Butterfly Park Visit",
+    "Cultural Handloom Workshop"
+  ],
+
+  "Kochi": [
+    "Chinese Fishing Nets Photography",
+    "Fort Kochi Heritage Walk",
+    "Jew Town Antique Market",
+    "Paradesi Synagogue Visit",
+    "Mattancherry Palace",
+    "St. Francis Church",
+    "Kerala Kathakali Dance Show",
+    "Cherai Beach Relaxing",
+    "Marine Drive Sunset Walk",
+    "Local Kerala Cuisine",
+    "Shopping for Spices",
+    "Kochi Biennale Art Festival",
+    "Hill Palace Museum",
+    "Bolgatty Palace Tour",
+    "Vypeen Island Boat Ride",
+    "Kerala Backwater Cruise",
+    "Ayurvedic Spa & Massage",
+    "Santa Cruz Basilica",
+    "Kodanad Elephant Sanctuary",
+    "Jew Street Shopping"
+  ],
+
+  "Kolkata": [
+    "Howrah Bridge Walk",
+    "Victoria Memorial Visit",
+    "Indian Museum Exploration",
+    "Dakshineswar Kali Temple",
+    "Belur Math Ashram",
+    "Marble Palace Tour",
+    "St. Paul’s Cathedral",
+    "Science City Exploration",
+    "Birla Planetarium",
+    "Shopping at New Market",
+    "College Street Book Shopping",
+    "Eden Gardens Stadium Visit",
+    "Kalighat Temple",
+    "Prinsep Ghat Riverfront",
+    "Local Bengali Cuisine",
+    "Tram Ride Experience",
+    "Kumartuli Pottery Village",
+    "Rabindra Sarobar Lake Walk",
+    "Eco Park Activities",
+    "Street Food at Park Street"
+  ],
+
+  "Leh Ladakh": [
+    "Pangong Lake Photography",
+    "Magnetic Hill Visit",
+    "Khardung La Pass Drive",
+    "Nubra Valley Camel Safari",
+    "Thiksey Monastery",
+    "Hemis Monastery Festival",
+    "Shanti Stupa Sunset",
+    "Leh Palace Tour",
+    "Zanskar River Rafting",
+    "Hemis National Park Trek",
+    "Lamayuru Monastery",
+    "Shopping for Tibetan Handicrafts",
+    "Local Ladakhi Cuisine Tasting",
+    "Diskit Monastery",
+    "Chang La Pass Adventure",
+    "Shey Palace Visit",
+    "Alchi Monastery",
+    "Markha Valley Trek",
+    "Motorbiking Adventure",
+    "Camping under Milky Way"
+  ],
+
+  "Manali": [
+    "Solang Valley Adventure Sports",
+    "Rohtang Pass Snow Activities",
+    "Hidimba Temple Visit",
+    "Manikaran Hot Springs",
+    "Old Manali Cafe Walk",
+    "Jogini Waterfall Trek",
+    "Vashisht Temple",
+    "Club House Activities",
+    "Naggar Castle Tour",
+    "Tibetan Monastery",
+    "Mall Road Shopping",
+    "Paragliding in Solang",
+    "Skiing Adventure",
+    "Himalayan Nyingmapa Monastery",
+    "Hampta Pass Trek",
+    "Beas River Rafting",
+    "Great Himalayan National Park",
+    "Local Himachali Cuisine",
+    "Camping in Kullu Valley",
+    "Snowboarding Fun"
+  ],
+
+  "Mumbai": [
+    "Gateway of India Visit",
+    "Marine Drive Walk",
+    "Elephanta Caves Tour",
+    "Chhatrapati Shivaji Terminus",
+    "Colaba Causeway Shopping",
+    "Juhu Beach Sunset",
+    "Bandra-Worli Sea Link",
+    "Siddhivinayak Temple",
+    "Haji Ali Dargah",
+    "Local Mumbai Street Food",
+    "Chowpatty Beach",
+    "Essel World Amusement Park",
+    "Film City Tour",
+    "Crawford Market Shopping",
+    "Kanheri Caves Visit",
+    "Nehru Planetarium",
+    "Sanjay Gandhi National Park",
+    "Bollywood Dance Show",
+    "Shopping at Fashion Street",
+    "Nightlife at Marine Drive"
+  ],
+
+  "Mysore": [
+    "Mysore Palace Tour",
+    "Chamundi Hill Visit",
+    "St. Philomena's Church",
+    "Mysore Zoo",
+    "Brindavan Gardens Musical Fountain",
+    "Railway Museum",
+    "Shopping for Silk Sarees",
+    "Local Market Street Food",
+    "Kukkarahalli Lake Walk",
+    "Art and Craft Museum",
+    "Lalitha Mahal Palace Visit",
+    "Chamundi Temple Festival",
+    "Jaganmohan Palace Art Gallery",
+    "Ranganathittu Bird Sanctuary",
+    "Shopping at Devaraja Market",
+    "GRS Fantasy Park",
+    "Yoga Classes in Mysore",
+    "Regional Museum of Natural History",
+    "Horse Riding Experience",
+    "Ayurvedic Spa & Wellness"
+  ],
+
+  // 🇮🇳 Indian Destinations (Part 3)
+
+  "Pune": [
+    "Shaniwar Wada Palace Tour",
+    "Aga Khan Palace Visit",
+    "Sinhagad Fort Trek",
+    "Dagadusheth Ganapati Temple",
+    "Raja Dinkar Kelkar Museum",
+    "Pataleshwar Cave Temple",
+    "Shopping at FC Road",
+    "Khadakwasla Dam Picnic",
+    "Osho Ashram Meditation",
+    "Pune Okayama Friendship Garden",
+    "National War Museum",
+    "Parvati Hill Climb",
+    "Rajiv Gandhi Zoological Park",
+    "Street Food at JM Road",
+    "Vetal Tekdi Nature Walk",
+    "Camping near Panshet Dam",
+    "Lavasa City Excursion",
+    "Paud Road Nightlife",
+    "Pashan Lake Bird Watching",
+    "Spiritual Tour at Alandi"
+  ],
+
+  "Rishikesh": [
+    "Ganga Aarti at Triveni Ghat",
+    "River Rafting Adventure",
+    "Yoga & Meditation Ashram",
+    "Ram Jhula Walk",
+    "Lakshman Jhula Bridge",
+    "Beatles Ashram Graffiti Tour",
+    "Neer Garh Waterfall Trek",
+    "Camping by Ganga River",
+    "Bungee Jumping Experience",
+    "White Sand Beach Walk",
+    "Shopping at Local Market",
+    "Spiritual Satsang Sessions",
+    "Parmarth Niketan Evening Aarti",
+    "Kayaking in Ganga",
+    "Mountain Biking Trails",
+    "Himalayan Trekking",
+    "Traditional Ayurvedic Massage",
+    "Wildlife Safari Rajaji Park",
+    "Photography at Sunset Point",
+    "Local Street Food Tasting"
+  ],
+
+  "Shillong": [
+    "Umiam Lake Boating",
+    "Elephant Falls Visit",
+    "Shillong Peak Viewpoint",
+    "Ward’s Lake Walk",
+    "Police Bazaar Shopping",
+    "Don Bosco Museum",
+    "Cathedral of Mary Help of Christians",
+    "Mawphlang Sacred Forest Trek",
+    "Butterfly Museum Visit",
+    "Golf Links Course",
+    "Laitlum Canyon Trek",
+    "Shillong Night Market",
+    "Traditional Khasi Food Tasting",
+    "David Scott Trail Hike",
+    "Air Force Museum",
+    "Spread Eagle Falls",
+    "Rhino Heritage Museum",
+    "State Museum of Meghalaya",
+    "Caving at Mawjymbuin",
+    "Local Music & Café Tour"
+  ],
+
+  "Shimla": [
+    "Mall Road Shopping",
+    "Jakhoo Temple Trek",
+    "Christ Church Visit",
+    "The Ridge Walk",
+    "Kufri Snow Adventure",
+    "Toy Train Ride (Kalka-Shimla)",
+    "Tara Devi Temple",
+    "Annandale Ground Visit",
+    "Scandal Point Photography",
+    "Summer Hill Trek",
+    "Ice Skating at Shimla Rink",
+    "Chadwick Falls",
+    "Himalayan Bird Park",
+    "Shopping at Lakkar Bazaar",
+    "Green Valley Photography",
+    "Mashobra Camping",
+    "Horse Riding in Kufri",
+    "Viceregal Lodge",
+    "Shaily Peak Hike",
+    "Local Himachali Cuisine"
+  ],
+
+  "Udaipur": [
+    "City Palace Tour",
+    "Lake Pichola Boat Ride",
+    "Jag Mandir Island Visit",
+    "Jagdish Temple",
+    "Saheliyon Ki Bari Garden",
+    "Bagore Ki Haveli Dance Show",
+    "Fateh Sagar Lake Evening Walk",
+    "Shilpgram Handicraft Shopping",
+    "Moti Magri Park",
+    "Vintage Car Museum",
+    "Monsoon Palace Sunset",
+    "Rajasthani Folk Music Performance",
+    "Karni Mata Temple Ropeway",
+    "Ambrai Ghat Dinner",
+    "Crystal Gallery",
+    "Shopping for Miniature Paintings",
+    "Hathi Pol Bazaar",
+    "Lake Palace Photography",
+    "Boat Ride to Jag Niwas",
+    "Traditional Rajasthani Thali"
+  ],
+
+  "Varanasi": [
+    "Evening Ganga Aarti at Dashashwamedh Ghat",
+    "Morning Boat Ride on Ganga",
+    "Kashi Vishwanath Temple Visit",
+    "Sarnath Buddhist Site",
+    "Manikarnika Ghat Spiritual Walk",
+    "Assi Ghat Sunrise Meditation",
+    "Ramnagar Fort Museum",
+    "Banaras Hindu University (BHU) Tour",
+    "Bharat Kala Bhavan Museum",
+    "Shopping for Banarasi Sarees",
+    "Local Street Food Tasting (Kachori, Lassi)",
+    "Alamgir Mosque",
+    "Tulsi Manas Mandir",
+    "Music Concert of Classical Gharanas",
+    "Weavers’ Village Experience",
+    "Yoga on the Ghats",
+    "Cycle Rickshaw Tour of Old City",
+    "Hanuman Ghat Spiritual Experience",
+    "Nepali Temple Visit",
+    "Ayurvedic Healing Session"
   ]
 };
+
+
 
   function generateTrip() {
     let tripData = JSON.parse(localStorage.getItem("tripData"));
